--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                 <!-- 拉到右邊的導覽列清單 -->
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#subscribeSection">DrawYing</a></li>
+                    <li><a href="#subscribeSection" data-toggle="lightbox">DrawYing</a></li>
                     <li><a href="#featureSection">我喜歡的</a></li>
                     <li><a href="#introduceSection">關於我</a></li>
                     <li><a href="#portfolioSection">旅人足跡</a></li>
@@ -78,10 +78,37 @@
     <!-- note subscribeSection -->
     <section id="subscribeSection">
 
+        <div class="button-group">
+            <a target="_blank" href="img/D.jpg" data-toggle="lightbox">
+                <button class="btn btn-success btn-lg">D</button>
+            </a>
+            <a target="_blank" href="img/R.jpg" data-toggle="lightbox">
+                <button class="btn btn-primary btn-lg">R</button>
+            </a>
+            <a target="_blank" href="img/A.jpg">
+                <button class="btn btn-success btn-lg">A</button>
+            </a>
+            <a target="_blank" href="img/W.jpg">
+                <button class="btn btn-primary btn-lg">W</button>
+            </a>
 
-        <a href="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.0-9/10625024_10201879793711482_7600869668641576852_n.jpg?oh=88f1eeb2653a86c42a040cc33ebea8f5&oe=59A108A8" target="_blank">
-            <button class="btn btn-success btn-block">DrawYing</button>
-        </a>
+            <a target="_blank" href="img/Y.jpg">
+                <button class="btn btn-success btn-lg">Y</button>
+            </a>
+            <a target="_blank" href="img/I.jpg">
+                <button class="btn btn-primary btn-lg">I</button>
+            </a>
+            <a target="_blank" href="img/N.jpg">
+                <button class="btn btn-success btn-lg">N</button>
+            </a>
+            <a target="_blank" href="img/G.jpg">
+                <button class="btn btn-primary btn-lg">G</button>
+            </a>
+
+        </div>
+
+
+
 
     </section>
     <!-- todo subscribe modal -->
@@ -107,7 +134,7 @@
                 <div class="col-sm-4 feature">
                     <i class="wow swing fa fa-diamond" aria-hidden="true"></i>
                     <h3>You See Sea</h3>
-                    <p>懷念在蘭嶼看海的日子<br/> 希望能在小島重拾荒廢一年的潛水&amp;釣魚技能</p>
+                    <p>懷念在蘭嶼看海的日子<br/> 希望能在小島重拾荒廢一年的潛水&amp;釣魚技能<br/>也希望能多多接觸小島上的人</p>
                 </div>
             </div>
 
@@ -125,13 +152,13 @@
                     <h1 class="section-title">Who am I</h1>
                     <h2 class="sub-section-title">Good things take time</h2>
                     <h3>Experience</h3>
-                    <p>當過屁孩、舉球員、菸酒生、兩年的Legal High，未來有無限可能，來許個願吧 </p>
+                    <p>當過屁孩、排球舉球員、法律系菸酒生、兩年的智慧財產權Legal High，未來有無限可能，來許個願吧 </p>
                     <h3>Talent</h3>
-                    <p>恆心、毅力、做白日夢
+                    <p>恆心、毅力、做白日夢、喜歡畫畫、會一點日文
                         <a href="#"></a>
                     </p>
                     <h3>Keep learning new things</h3>
-                    <p>彈好幾首歌、消化待看書單、精進第三外語<strong>(CSS/HTML)</strong>
+                    <p>彈好幾首歌、消化待看書單、精進第三外語<strong>(程式語言：CSS/HTML)</strong>
                         <a href=""></a>
                     </p>
                     <h3>Motto</h3>
