--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
                     <h1 class="section-title">Who am I</h1>
                     <h2 class="sub-section-title">Good things take time</h2>
                     <h3>Experience</h3>
-                    <p>當過屁孩、排球舉球員、法律系菸酒生、兩年的智慧財產權Legal High，未來有無限可能，來許個願吧 </p>
+                    <p>排球舉球員、台大法律系、台大法律系經濟法組菸酒生、兩年的智慧財產權Legal High(聖島國際法律事務所)，未來有無限可能，來許個願吧 </p>
                     <h3>Talent</h3>
-                    <p>恆心、毅力、做白日夢、喜歡畫畫、會一點日文
+                    <p>恆心、毅力、做白日夢、喜歡畫畫、會一點日文(通過N2檢定)
                         <a href="#"></a>
                     </p>
                     <h3>Keep learning new things</h3>
-                    <p>彈好幾首歌、消化待看書單、精進第三外語<strong>(程式語言：CSS/HTML)</strong>
+                    <p>彈好幾首歌、消化待看書單、精進第三外語<strong>(程式語言：CSS/HTML)</strong><br>如果有幸加入App school，又多了第四外語(?)
                         <a href=""></a>
                     </p>
                     <h3>Motto</h3>
@@ -206,7 +206,7 @@
     <!-- note userReviewSection -->
     <section id="userReviewSection">
         <h1 class="section-title">My Plan In the Future</h1>
-        <h2 class="sub-section-title">Ny little dream</h2>
+        <h2 class="sub-section-title">My little dream</h2>
 
 
         <!--輪播開始-->
@@ -222,7 +222,7 @@
                         <div class="col-sm-6">
                             <h3 class="title">Short-term</h3>
                             <h4 class="name">Find and Try</h4>
-                            <p>找座小島看海發呆放空一下，<br/>找座大山挑戰一下，<br/>沒有計畫或許是最好的計畫</p>
+                            <p>不斷學習，<br/>不斷練習，<br/>活出自己的樣子</p>
                         </div>
                     </div>
                 </div>
