--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <a href="#"></a>
                     </p>
                     <h3>Keep learning new things</h3>
-                    <p>彈好幾首歌、消化待看書單、精進第三外語<strong>(程式語言：CSS/HTML)</strong><br>如果有幸加入App school，又多了第四外語(?)
+                    <p>彈好幾首歌、消化待看書單、精進第三外語<strong>(程式語言：CSS/HTML)</strong>
                         <a href=""></a>
                     </p>
                     <h3>Motto</h3>
